# SputnikTest

./: .env.dev  .gitignore  README.md  docker-compose.dev.yml
backend/: pyproject.toml  pytest.ini
backend/migrations/: env.py
backend/src/: app.py  env.py
backend/src/db/config/: engine.py  url.py
backend/src/db/model/: __init__.py  alert.py  base.py  file.py
backend/src/db/service/: __init__.py  alert.py  file.py
backend/src/path/: __init__.py  storage_path.py
backend/src/route/: __init__.py  alert.py  file.py
backend/src/schema/: __init__.py  alert.py  base.py  file.py
backend/src/task/: __init__.py  file_processing.py  task.py
backend/tests/: conftest.py  test_01_files.py  test_02_alert.py
frontend/: Dockerfile
frontend/src/app/: page.tsx
frontend/src/app/component/: ManageFile.tsx  Pagination.tsx  index.ts
frontend/src/app/format/: formatDate.ts
frontend/src/app/getVariant/: getVariant.ts
frontend/src/app/item/: AlertItem.tsx  FileItem.tsx
frontend/src/app/url/: url.ts
frontend/src/component/: ModalWindow.tsx  TableSection.tsx
frontend/src/type/: index.ts
frontend/src/util/format/: formatSize.ts  index.ts
